# second-hand

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.specify/memory/: constitution.md
debian/: changelog  control  copyright  postinst  postrm  prerm  rules  second-hand.links  second-hand.service
docker/: Dockerfile.deb-test  Dockerfile.dev  Dockerfile.test  chrony.conf  docker-compose.test.yml  run-integration-tests.sh  test-deb.sh
scripts/: build-pex.sh
specs/001-dashboard-init/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-dashboard-init/checklists/: requirements.md
specs/001-dashboard-init/contracts/: openapi.yaml
specs/002-pychrony-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-pychrony-integration/checklists/: requirements.md
specs/002-pychrony-integration/contracts/: dashboard-api.md
specs/003-ui-visual-enhancements/: tasks.md
src/second_hand/: __init__.py  config.py  main.py
src/second_hand/components/: __init__.py  base.py  dashboard.py  error.py  rtc.py  sources.py  stats.py  tooltips.py  tracking.py
src/second_hand/data/: __init__.py
src/second_hand/services/: __init__.py  chrony.py  dns.py  geoip.py
src/second_hand/static/css/: style.css
src/second_hand/static/js/: dashboard.js
src/second_hand/utils/: __init__.py
src/static/css/: style.css
tests/: __init__.py  conftest.py  test_components.py  test_config.py  test_main.py
tests/integration/: __init__.py  conftest.py  test_chrony_integration.py
tests/unit/: __init__.py  test_chrony_service.py  test_rtc_component.py  test_sources_component.py  test_stats_component.py  test_tooltips.py  test_tracking_component.py  test_utils.py
