[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "second-hand"
dynamic = ["version"]
description = "Chrony time statistics dashboard"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "second-hand contributors" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "htpy>=25.10.0",
    "pydantic-settings>=2.7.0",
    "pychrony>=0.0.15",
]

# pychrony is currently only available on Test PyPI
# Remove this index once pychrony is published to main PyPI
[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
explicit = true

[tool.uv.sources]
pychrony = { index = "testpypi" }

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ty>=0.0.1a0",
    "ruff>=0.9.0",
]

[project.scripts]
second-hand = "second_hand.main:run"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/second_hand/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/second_hand"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"

[tool.coverage.run]
source = ["second_hand"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["second_hand"]

[tool.ty.environment]
python-version = "3.14"
